<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>io.admin-shell.aas</groupId>
		<artifactId>dataformat-parent</artifactId>
		<version>${revision}</version>
	</parent>
	<artifactId>dataformat-uanodeset</artifactId>
	<name>Asset Administration Shell UA-Nodeset-Serializer</name>

	<properties>
		<jaxb-rich-contract.version>2.1.0</jaxb-rich-contract.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>io.admin-shell.aas</groupId>
			<artifactId>model</artifactId>
			<version>${model.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>io.admin-shell.aas</groupId>
			<artifactId>dataformat-core</artifactId>
			<version>${revision}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.3.1</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.persistence</groupId>
			<artifactId>org.eclipse.persistence.moxy</artifactId>
			<version>2.7.8</version>
		</dependency>
		<dependency>
			<groupId>net.codesup.util</groupId>
			<artifactId>jaxb2-rich-contract-plugin</artifactId>
			<version>${jaxb-rich-contract.version}</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-xjc-plugin</artifactId>
				<version>3.3.1</version>
				<configuration>
					<extensions>
						<extension>net.codesup.util:jaxb2-rich-contract-plugin:${jaxb-rich-contract.version}</extension>
					</extensions>
				</configuration>
				<executions>
					<execution>
						<id>generate-uanodeset-classes</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>xsdtojava</goal>
						</goals>
						<configuration>
							<xsdOptions>
								<xsdOption>
									<xsd>${basedir}/nodeset/xsd/UANodeSet.xsd</xsd>
									<extensionArgs>
										<extensionArg>-Xfluent-builder</extensionArg>
									</extensionArgs>
								</xsdOption>
							</xsdOptions>
						</configuration>
					</execution>
					<execution>
						<id>generate-typedictionary-classes</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>xsdtojava</goal>
						</goals>
						<configuration>
							<xsdOptions>
								<xsdOption>
									<xsd>${basedir}/nodeset/xsd/Opc.Ua.I4AAS_V3Draft.NodeSet2.xsd</xsd>
									<extensionArgs>
										<extensionArg>-Xfluent-builder</extensionArg>
									</extensionArgs>
								</xsdOption>
							</xsdOptions>
						</configuration>
					</execution>
					<execution>
						<id>generate-uatypes-classes</id>
						<phase>none</phase><!-- currently generated classes do not work properly when nested, namespace is not declared, fixable within package-info thus copy-pasted and manually adjusted -->
						<goals>
							<goal>xsdtojava</goal>
						</goals>
						<configuration>
							<xsdOptions>
								<xsdOption>
									<xsd>${basedir}/nodeset/xsd/Opc.Ua.Types.xsd</xsd>
									<extensionArgs>
										<extensionArg>-Xfluent-builder</extensionArg>
									</extensionArgs>
								</xsdOption>
							</xsdOptions>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<!-- excluding generated classes and mappers which are not meant to be used directly -->
					<excludePackageNames>com.kscs.util.*:org.opcfoundation.*:io.adminshell.aas.v3.dataformat.i4aas.mappers:io.adminshell.aas.v3.dataformat.i4aas.mappers.*:io.adminshell.aas.v3.dataformat.i4aas.parsers</excludePackageNames>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
